IsPackedArray intrinsic no longer matches C++ function
Categories
(Core :: JavaScript Engine, defect, P1)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox101 | --- | fixed |
People
(Reporter: anba, Assigned: anba)
References
(Blocks 1 open bug)
Details
Attachments
(2 files)
The intrinsic should match the C++ function. This was changed in bug 1744975 to enable Array.prototype.concat to work on tuples. But that change was actually incorrect, probably caused by a spec bug in the tuples proposal (*).
(*) The tuples proposal changes IsConcatSpreadable to return true for tuples. But it didn't update Array.prototype.concat to correctly work when E isn't an object: the current Array.prototype.concat spec expects that E is an object, which isn't true anymore with the proposed changes to IsConcatSpreadable.
| Assignee | ||
Comment 1•4 years ago
|
||
Also update IsConcatSpreadable to match Tuple spec proposal.
| Assignee | ||
Comment 2•4 years ago
|
||
Not related to part 1, just further clean-ups.
Depends on D142936
Updated•4 years ago
|
Updated•4 years ago
|
Comment 4•4 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/d5324c59822b
https://hg.mozilla.org/mozilla-central/rev/59f5742984f2
Description
•