Bug 1763107 - Part 2: Remove unused DefineAsIntrinsic enum. r=jandem

Not related to part 1, just further clean-ups.

Depends on D142936

Differential Revision: https://phabricator.services.mozilla.com/D142937